syntax = "proto3";

package todoPackage;

service Todo {
  rpc createTodo(TodoItem) returns (TodoItem);
  rpc readTodos(noparams) returns (TodoItems);
  rpc readTodoStream(noparams) returns (stream TodoItem);
}

message noparams {}

message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1; // array of TodoItem
}
